test/compile-errors/fun-closure-mut.crow
main void()
	x mut nat = 0
	_ fun nat() = () => x

	y nat mut[] = 0,
	_ fun nat mut[]() = () => y
	()
